crates/test-files/fixtures/compile_errors/missing_return_in_else.fe
contract Foo {
    pub fn bar(val: u256) -> u256 {
        if val > 1 {
            return 5
        } else {
            let x: u256 = 1
        }
    }
}
